# booking_web_scrapper

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  entrypoint.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml
booking_scraper/: __init__.py  exception.py  globals.py  helper.py  logger.py  model.py  scraper.py
booking_scrapper/: __init__.py  model.py  scrapper.py  serializer.py
data/Kempinski Hotel Bristol Berlin, Germany - Booking.com_files/: activityi(1).html  activityi.html  common.js  controls.js  fbds.js  iu3.html  js  places_impl.js  stats.js  task 1 - Kempinski Hotel Bristol Berlin, Germany - Booking.com.html  tv2track.js  usage.js  utag.150.js  utag.260.js  utag.263.js  utag.284.js  utag.308.js  utag.332.js  utag.396.js  utag.398.js  utag.404.js  utag.435.js
examples/: divide_numbers.py  ex_serializer.py
project_root/: divider.py
tests/: test_divider.py  test_helpers.py  test_model.py  test_scraper.py  test_serializer.py
