[tool.poetry]
name = "python-template-repository"
version = "0.1.0"
description = ""
authors = ["hasanozdem1r <hasanozdemir1@trakya.edu.tr>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
