[tool.poetry]
name = "booking scrapper"
version = "0.1.0"
description = ""
authors = ["hasanozdem1r <hasanozdemir1@trakya.edu.tr>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
bs4 = "^0.0.1"
requests = "^2.28.2"
pydantic = "^1.10.5"
yapf = "^0.32.0"
setuptools = "^67.3.2"
lxml = "^4.9.2"
black = "^23.1.0"
pytest-mock = "^3.10.0"
memray = "^1.6.0"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
